@@ -180,6 +180,8 @@ static const struct settings_str_entry settings_map[] = {
 	{ FreeRDP_Workarea, 0, "FreeRDP_Workarea" },
 	{ FreeRDP_DesktopOrientation, 1, "FreeRDP_DesktopOrientation" },
 	{ FreeRDP_ProxyPort, 1, "FreeRDP_ProxyPort" },
+	{ FreeRDP_TLSMaxVersion, 1, "FreeRDP_TLSMaxVersion" },
+	{ FreeRDP_TLSMinVersion, 1, "FreeRDP_TLSMinVersion" },
 	{ FreeRDP_AcceptedCertLength, 3, "FreeRDP_AcceptedCertLength" },
 	{ FreeRDP_AuthenticationLevel, 3, "FreeRDP_AuthenticationLevel" },
 	{ FreeRDP_AutoReconnectMaxRetries, 3, "FreeRDP_AutoReconnectMaxRetries" },
@@ -393,6 +395,10 @@ static const struct settings_str_entry settings_map[] = {
 BOOL freerdp_settings_clone_keys(rdpSettings* dst, const rdpSettings* src)
 {
 	size_t x;
+
+	WINPR_ASSERT(dst);
+	WINPR_ASSERT(src);
+
 	for (x = 0; x < ARRAYSIZE(settings_map); x++)
 	{
 		const struct settings_str_entry* cur = &settings_map[x];
@@ -466,9 +472,214 @@ BOOL freerdp_settings_clone_keys(rdpSettings* dst, const rdpSettings* src)
 	return TRUE;
 }
 
+BOOL freerdp_settings_print_diff(wLog* log, DWORD level, const rdpSettings* settings,
+                                 const rdpSettings* other)
+{
+	BOOL rc = FALSE;
+	size_t x;
+
+	WINPR_ASSERT(log);
+	WINPR_ASSERT(settings);
+	WINPR_ASSERT(other);
+
+	for (x = 0; x < ARRAYSIZE(settings_map); x++)
+	{
+		const struct settings_str_entry* cur = &settings_map[x];
+		switch (cur->type)
+		{
+			case 0: /* bool */
+			{
+				BOOL sval = freerdp_settings_get_bool(settings, cur->id);
+				BOOL cval = freerdp_settings_get_bool(other, cur->id);
+				if (sval != cval)
+				{
+					rc = TRUE;
+					WLog_Print(log, level, "%s [BOOL]: %s -> %s", cur->str, sval ? "TRUE" : "FALSE",
+					           cval ? "TRUE" : "FALSE");
+				}
+			}
+			break;
+			case 1: /* UINT16 */
+			{
+				UINT16 sval = freerdp_settings_get_uint16(settings, cur->id);
+				UINT16 cval = freerdp_settings_get_uint16(other, cur->id);
+				if (sval != cval)
+				{
+					rc = TRUE;
+					WLog_Print(log, level, "%s [UINT16]: %" PRIu16 " -> %" PRIu16, cur->str, sval,
+					           cval);
+				}
+			}
+			break;
+			case 2: /* INT16 */
+			{
+				INT16 sval = freerdp_settings_get_int16(settings, cur->id);
+				INT16 cval = freerdp_settings_get_int16(other, cur->id);
+				if (sval != cval)
+				{
+					rc = TRUE;
+					WLog_Print(log, level, "%s [INT16]: %" PRId16 " -> %" PRId16, cur->str, sval,
+					           cval);
+				}
+			}
+			break;
+			case 3: /* UINT32 */
+			{
+				UINT32 sval = freerdp_settings_get_uint32(settings, cur->id);
+				UINT32 cval = freerdp_settings_get_uint32(other, cur->id);
+				if (sval != cval)
+				{
+					rc = TRUE;
+					WLog_Print(log, level, "%s [UINT32]: %" PRIu32 " -> %" PRIu32, cur->str, sval,
+					           cval);
+				}
+			}
+			break;
+			case 4: /* INT32 */
+			{
+				INT32 sval = freerdp_settings_get_int32(settings, cur->id);
+				INT32 cval = freerdp_settings_get_int32(other, cur->id);
+				if (sval != cval)
+				{
+					rc = TRUE;
+					WLog_Print(log, level, "%s [INT32]: %" PRId32 " -> %" PRId32, cur->str, sval,
+					           cval);
+				}
+			}
+			break;
+			case 5: /* UINT64 */
+			{
+				UINT64 sval = freerdp_settings_get_uint64(settings, cur->id);
+				UINT64 cval = freerdp_settings_get_uint64(other, cur->id);
+				if (sval != cval)
+				{
+					rc = TRUE;
+					WLog_Print(log, level, "%s [UINT64]: %" PRIu64 " -> %" PRIu64, cur->str, sval,
+					           cval);
+				}
+			}
+			break;
+			case 6: /* INT64 */
+			{
+				INT64 sval = freerdp_settings_get_int64(settings, cur->id);
+				INT64 cval = freerdp_settings_get_int64(other, cur->id);
+				if (sval != cval)
+				{
+					rc = TRUE;
+					WLog_Print(log, level, "%s [INT64]: %" PRId64 " -> %" PRId64, cur->str, sval,
+					           cval);
+				}
+			}
+			break;
+			case 7: /* strings */
+			{
+				const char* sval = freerdp_settings_get_string(settings, cur->id);
+				const char* cval = freerdp_settings_get_string(other, cur->id);
+				if (sval != cval)
+				{
+					if (!sval || !cval || (strcmp(sval, cval) != 0))
+					{
+						rc = TRUE;
+						WLog_Print(log, level, "%s [STRING]: '%s' -> '%s'", cur->str, sval, cval);
+					}
+				}
+			}
+			break;
+			case 8: /* pointer */
+			{
+				const void* sval = freerdp_settings_get_pointer(settings, cur->id);
+				const void* cval = freerdp_settings_get_pointer(other, cur->id);
+				if (sval != cval)
+				{
+					if ((sval && !cval) || (!sval && cval))
+					{
+						rc = TRUE;
+						WLog_Print(log, level, "%s [POINTER]: '%p' -> '%p'", cur->str, sval, cval);
+					}
+				}
+			}
+			break;
+		}
+	}
+	return rc;
+}
+
+void freerdp_settings_dump(wLog* log, DWORD level, const rdpSettings* settings)
+{
+	size_t x;
+
+	WINPR_ASSERT(log);
+	WINPR_ASSERT(settings);
+
+	for (x = 0; x < ARRAYSIZE(settings_map); x++)
+	{
+		const struct settings_str_entry* cur = &settings_map[x];
+		switch (cur->type)
+		{
+			case 0: /* bool */
+			{
+				BOOL sval = freerdp_settings_get_bool(settings, cur->id);
+				WLog_Print(log, level, "%s [BOOL]: %s", cur->str, sval ? "TRUE" : "FALSE");
+			}
+			break;
+			case 1: /* UINT16 */
+			{
+				UINT16 sval = freerdp_settings_get_uint16(settings, cur->id);
+				WLog_Print(log, level, "%s [UINT16]: %" PRIu16, cur->str, sval);
+			}
+			break;
+			case 2: /* INT16 */
+			{
+				INT16 sval = freerdp_settings_get_int16(settings, cur->id);
+				WLog_Print(log, level, "%s [INT16]: %" PRId16, cur->str, sval);
+			}
+			break;
+			case 3: /* UINT32 */
+			{
+				UINT32 sval = freerdp_settings_get_uint32(settings, cur->id);
+				WLog_Print(log, level, "%s [UINT32]: %" PRIu32, cur->str, sval);
+			}
+			break;
+			case 4: /* INT32 */
+			{
+				INT32 sval = freerdp_settings_get_int32(settings, cur->id);
+				WLog_Print(log, level, "%s [INT32]: %" PRId32, cur->str, sval);
+			}
+			break;
+			case 5: /* UINT64 */
+			{
+				UINT64 sval = freerdp_settings_get_uint64(settings, cur->id);
+				WLog_Print(log, level, "%s [UINT64]: %" PRIu64, cur->str, sval);
+			}
+			break;
+			case 6: /* INT64 */
+			{
+				INT64 sval = freerdp_settings_get_int64(settings, cur->id);
+				WLog_Print(log, level, "%s [INT64]: %" PRId64, cur->str, sval);
+			}
+			break;
+			case 7: /* strings */
+			{
+				const char* sval = freerdp_settings_get_string(settings, cur->id);
+				WLog_Print(log, level, "%s [STRING]: '%s'", cur->str, sval);
+			}
+			break;
+			case 8: /* pointer */
+			{
+				const void* sval = freerdp_settings_get_pointer(settings, cur->id);
+				WLog_Print(log, level, "%s [POINTER]: '%p'", cur->str, sval);
+			}
+			break;
+		}
+	}
+}
+
 void freerdp_settings_free_keys(rdpSettings* dst, BOOL cleanup)
 {
 	size_t x;
+
+	WINPR_ASSERT(dst);
+
 	for (x = 0; x < ARRAYSIZE(settings_map); x++)
 	{
 		const struct settings_str_entry* cur = &settings_map[x];
@@ -487,6 +698,9 @@ void freerdp_settings_free_keys(rdpSettings* dst, BOOL cleanup)
 SSIZE_T freerdp_settings_get_key_for_name(const char* value)
 {
 	size_t x;
+
+	WINPR_ASSERT(value);
+
 	for (x = 0; x < ARRAYSIZE(settings_map); x++)
 	{
 		const struct settings_str_entry* cur = &settings_map[x];
@@ -499,6 +713,9 @@ SSIZE_T freerdp_settings_get_key_for_name(const char* value)
 SSIZE_T freerdp_settings_get_type_for_name(const char* value)
 {
 	size_t x;
+
+	WINPR_ASSERT(value);
+
 	for (x = 0; x < ARRAYSIZE(settings_map); x++)
 	{
 		const struct settings_str_entry* cur = &settings_map[x];
@@ -511,6 +728,7 @@ SSIZE_T freerdp_settings_get_type_for_name(const char* value)
 SSIZE_T freerdp_settings_get_type_for_key(size_t key)
 {
 	size_t x;
+
 	for (x = 0; x < ARRAYSIZE(settings_map); x++)
 	{
 		const struct settings_str_entry* cur = &settings_map[x];
@@ -523,6 +741,7 @@ SSIZE_T freerdp_settings_get_type_for_key(size_t key)
 const char* freerdp_settings_get_name_for_key(size_t key)
 {
 	size_t x;
+
 	for (x = 0; x < ARRAYSIZE(settings_map); x++)
 	{
 		const struct settings_str_entry* cur = &settings_map[x];
